--- a/templates/configs/znc.conf.header.erb
+++ b/templates/configs/znc.conf.header.erb
@@ -1,10 +1,8 @@
 AnonIPLimit  = 10
-Listener4    = <% if @ssl == 'true' -%>+<% end -%><%= @port %>
+Listener4    = <% if @ssl != 'false' -%>+<% end -%><%= @port %>
 ConnectDelay = 5
 ServerThrottle = 30
 Skin         = dark-clouds
 StatusPrefix = *
-<% if @auth_type == 'sasl' -%>
-LoadModule   = saslauth saslauthd
-<% end -%>
 LoadModule   = webadmin
+<% if @ssl != 'false' -%>SSLCertFile = <%= @ssl %><% end -%>
